@@ -1,3 +1,12 @@
+2023-12-19T16:11:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7264478895 # 2188
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-19
+* notice: last 14d: unq all: 1 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 826 1514 / 834 1529
+* notice: next accum: outdated-unq outdated-all / unq all: 826 1514 / 835 1530
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-12-19]
+
 2023-12-19T00:46:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7255768759 # 2186
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-19
